# Auto_Build_Number_Increment

./: README.md  build_number.cmake
examples/C/: CMakeLists.txt  main.c
examples/CXX/: CMakeLists.txt  main.cpp
